--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,7 @@ serde_json = "1.0"
 rfd = "*"
 image = "0.24.7"
 bincode = "1.3"
+home = "0.5.9"
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
 # DO NOT REMOVE!!
