--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,8 @@ rfd = "*"
 image = "0.24.7"
 bincode = "1.3"
 home = "0.5.9"
+open = "5.1.2"
+
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
 # DO NOT REMOVE!!
